<?xml version="1.0"?>
<package>
  <name>oroca_ros_tutorials_gui</name>
  <version>1.0.0</version>
  <description>

     oroca_ros_tutorials_gui

  </description>
  <maintainer email="routiful@gmail.com">Darby Lim</maintainer>
  <author>Taehoon Lim</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>oroca_ros_tutorials_msgs</build_depend>

  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>oroca_ros_tutorials_msgs</run_depend>


</package>
